5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1753_1524.log
== TEST (2019-05-16 18:30:15) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0:
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 5
    inicial = (inicial + x)- y
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:30:17) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0:
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.242983
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 5
    inicial = (inicial + x)- y
          ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:18) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0:
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 5
    inicial = (inicial + x)- y
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:30:19) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0:
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.201839
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 5
    inicial = (inicial + x)- y
          ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:30:19) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0:
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.209768
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 5
    inicial = (inicial + x)- y
          ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:28) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:30:30) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.225114
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:55) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + 1 =
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:30:57) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + 1 =
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.177731
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:03) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1=
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:05) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1=
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.157308
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:09) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + 1=
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:10) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + 1=
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.223475
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:16) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1 =
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:17) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1 =
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.251153
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:18) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1 =
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.201608
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:19) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador +1 =
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.364148
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:26) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador = +1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:28) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador = +1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.26585
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:32) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador = + 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:34) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador = + 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.313944
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:56) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres" %contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:58) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres" %contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:58) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres" %contador)
































-- EXECUTION TIME:
0.267921
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:59) 
-- CODE:
inicial = int(input())
y = int(input())
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres" %contador)
































-- EXECUTION TIME:
0.269324
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:22) 
-- CODE:
inicial = int(input(x))
y = int(input(y))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:24) 
-- CODE:
inicial = int(input(x))
y = int(input(y))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.237377
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:44) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:46) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:46) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.271169
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:46) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:46) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:47) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.175321
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:47) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:47) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.45866
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:47) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- ERROR:
File "XXXX", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:48) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.347315
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:49) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.527311
-- ERROR:
  File "/home/codebench/codes/1753/1524/main.py", line 4
    while inicial > 0
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:49) 
-- CODE:
inicial = int(input(267))
y = int(input(12))
contador = 0
while inicial > 0
inicial = (inicial + x)- y
contador + = 1
print("perderá em: %d trimestres"%contador)
































-- EXECUTION TIME:
0.304028
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1524/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
